# Trivial example using gtest and gmock
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")

add_executable(identity Identity.cpp)
add_executable(index Index.cpp)
add_executable(tensor Tensor.cpp)
add_executable(library Determinant.cpp Inverse.cpp Transpose.cpp)
add_executable(bind Bind.cpp)
add_executable(index_map IndexMap.cpp)
add_executable(operators Operators.cpp)
add_executable(scalar Scalar.cpp)
add_executable(trees Trees.cpp)
add_executable(epsilon Epsilon.cpp)
add_executable(delta Delta.cpp)

target_link_libraries(identity gtest_main ${LAPACK_LIBRARIES})
target_link_libraries(tensor gtest_main ${LAPACK_LIBRARIES})
target_link_libraries(library gtest_main ${LAPACK_LIBRARIES})
target_link_libraries(bind gtest_main ${LAPACK_LIBRARIES})
target_link_libraries(index_map gtest_main ${LAPACK_LIBRARIES})
target_link_libraries(operators gtest_main ${LAPACK_LIBRARIES})
target_link_libraries(scalar gtest_main ${LAPACK_LIBRARIES})
target_link_libraries(trees gtest_main ${LAPACK_LIBRARIES})
target_link_libraries(epsilon gtest_main ${LAPACK_LIBRARIES})
target_link_libraries(delta gtest_main ${LAPACK_LIBRARIES})


add_test(NAME identity_test COMMAND identity)
add_test(NAME index_test COMMAND index)
add_test(NAME tensor_test COMMAND tensor)
add_test(NAME library_test COMMAND library)
add_test(NAME bind_test COMMAND bind)
add_test(NAME index_map_test COMMAND index_map)
add_test(NAME operators_test COMMAND operators)
add_test(NAME scalar_test COMMAND scalar)
add_test(NAME trees_test COMMAND trees)
add_test(NAME epsilon_test COMMAND epsilon)
add_test(NAME delta_test COMMAND delta)
